--- a/Osmium/Osmium/Osmium.csproj
+++ b/Osmium/Osmium/Osmium.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="RestSharp" Version="111.2.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\GeneralClassLibrary\GeneralClassLibrary.csproj" />
+  </ItemGroup>
+
 </Project>
