--- a/Osmium/DataAccess/DataAccess.csproj
+++ b/Osmium/DataAccess/DataAccess.csproj
@@ -12,7 +12,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\GeneralClassLibrary\GeneralClassLibrary.csproj" />
+    <ProjectReference Include="..\GeneralClassLibrary\BusinessLogicLibrary.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="Bloomberglp.Blpapi">
+      <HintPath>Packages\Bloomberglp.Blpapi.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
